cat pic changes

--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -487,16 +487,16 @@ function preview_image(event)
 		<img class="pics" src="assets/commissions/cat1_3.jpeg">
 	</div>
 	<div class="slides">
-		<img class="pics" src="assets/commissions/cat2_1.jpeg">
+		<img class="pics" src="assets/commissions/cat2_1.jpg">
 	</div>
 	<div class="slides">
 		<img class="pics" src="assets/commissions/cat2_2.JPG">
 	</div>
 	<div class="slides">
-		<img class="pics" src="assets/commissions/cat2_3.jpeg">
+		<img class="pics" src="assets/commissions/cat2_3.jpg">
 	</div>
 	<div class="slides">
-		<img class="pics" src="assets/commissions/cat2_4.jpeg">
+		<img class="pics" src="assets/commissions/cat2_4.jpg">
 	</div>
 
 	<button class="slide_button prev" onclick="plusSlides(-1)"><</button>
