shop submitted alignment fix

--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -176,6 +176,7 @@ function preview_image(event)
 
 /*estimate stuff below*/
 	.estimate_bar {
+		position: relative;
 		background-color: #ffddc7;
 		height: 9vw;
 		width: 88vw;
@@ -184,6 +185,7 @@ function preview_image(event)
 		margin-top: .6vw;
 	}
 	.corner{
+		margin-top: -9vw;
 		border-radius: 0;
 		width: 10%;
 	}
@@ -193,7 +195,7 @@ function preview_image(event)
 		font-weight: 700;
 		font-size: 8vw;
 		margin-left: 29vw;
-		margin-top: 0vw;
+		margin-top: -9.5vw;
 		margin-bottom: 5vw;
 		color: black;
 	}
@@ -389,7 +391,7 @@ function preview_image(event)
 			position: relative;
 			font-size: 4vw;
 			margin-left: 2.5vw;
-			margin-top: .5vw;
+			margin-top: -4.5vw;
 			float: left;
 		}
 		#doodle{
