--- a/contact_submitted.html
+++ b/contact_submitted.html
@@ -262,7 +262,7 @@
 <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
   <br>
-  Thank you! Your message has been submitted and I will get back to you as soon as possible. - Annie
+  Thank you! Your message has been sent and I will get back to you as soon as possible. - Annie
 </div>
 
 	<div id="handles">
