--- a/shop.html
+++ b/shop.html
@@ -477,7 +477,7 @@ function preview_image(event)
 <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
   <br>
-  Thank you! Your request has been sent and I will get back to you as soon as possible. - Annie
+  Thank you! Your request has been submitted and I will get back to you as soon as possible. - Annie
 </div>
 
 <div id="slideshow">
