--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
+	#body{
+		background-color: red;
+	}
 	#artworks{
 		display: grid;
 		grid-gap: 3vw;
-		background-color: red;
 	}
 	#artworks img{
 		width: 100%;
