--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
-	#body{
-		background-color: pink;
-	}
 	#artworks{
 		display: grid;
 		grid-gap: 3vw;
+		background-color: pink;
 	}
 	#artworks img{
 		width: 100%;
@@ -68,6 +66,9 @@
 	  left: 0;
 	  top: 0;
 	  width: 100%;
+	  padding-right: 0;
+	  padding-left: 0;
+	  
 	  height: 100%;
 	  overflow: auto;
 	  background-color: rgba(0, 0, 0,  .95);
