--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	#artworks{
 		display: grid;
 		grid-gap: 3vw;
-		background-color: yellow;
+		background-color: green;
 	}
 	#artworks img{
 		width: 100%;
@@ -95,7 +95,6 @@
 	  right: 3vw;
 	  font-size: 13vw;
 	  /*font-weight: bold;*/
-	  	 background-color: red;
 	}
 	.close:hover,
 	.close:focus {
@@ -159,7 +158,6 @@
 	}
 
 	.title-container {
-	background-color: blue;
 	  text-align: center;
 	  margin-top: 0vw;
 	  color: white;
@@ -169,7 +167,6 @@
 	}
 
 	.caption-container{
-		background-color: red;
 	  text-align: center;
 	  margin-top: 0vw;
 	  margin-left: 7vw;
@@ -181,7 +178,6 @@
 	
 	/* the little icons of all the images in the lightbox*/
 	.column { 
-		background-color: yellow;
 	  display: flex;
 	  flex-wrap: wrap;
 	  align-items: flex-start;
@@ -189,6 +185,9 @@
 	  width: 100vw;
 	  margin-left: 7.5vw;
 	  margin-bottom: 2vw;
+	  background-color: yellow;
+	  margin-right:0;
+	  padding-right: 0;
 	}
 	.column img{
 	  margin: 1vw;
