swipe left and right on artwork lightbox

--- a/index.html
+++ b/index.html
@@ -702,9 +702,9 @@ function handleGesture() {
         plusSlides(-1);
     }
 
-    if ((touchendY >= touchstartY) && (Math.abs(touchstartX-touchendX)<Math.abs(touchendY-touchstartY))){
-    	closeModal();
-    }
+    // if ((touchendY >= touchstartY) && (Math.abs(touchstartX-touchendX)<Math.abs(touchendY-touchstartY))){
+    // 	closeModal();
+    // }
     
 }
 
