insta username change

--- a/contact.html
+++ b/contact.html
@@ -269,7 +269,7 @@
 
 	<div id="handles">
 		<a href="mailto:annie.t.courtney@gmail.com"><p id="my_email"><img id="puffalope" src="assets/mail.svg" width="30vw"><a id="email_text" href="mailto:annie.t.courtney@gmail.com"> annie.t.courtney@gmail.com</a></p></a>
-		<a href="http://instagram.com/annietcourtney" target="_blank" rel="noopener noreferrer"><p id="insta_handle"><img id="insta_icon" src="assets/insta.svg" width="30vw"><a id="insta_text" href="http://instagram.com/annietcourtney" target="_blank" rel="noopener noreferrer"> @annietcourtney</a></p></a>
+		<a href="http://instagram.com/anniecourtney.art" target="_blank" rel="noopener noreferrer"><p id="insta_handle"><img id="insta_icon" src="assets/insta.svg" width="30vw"><a id="insta_text" href="http://instagram.com/anniecourtney.art" target="_blank" rel="noopener noreferrer"> @anniecourtney.art</a></p></a>
 	</div>
 <div id="phone">
 	<img  id="doodle" src="assets/contact_me.png" alt="doodle of girl on phone">
