adding Penelope pics to shop page

--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -480,6 +480,21 @@ function preview_image(event)
 
 <div id="slideshow">
 	<div class="slides">
+		<img class="pics" src="assets/commissions/penelope1.JPG">
+	</div>
+	<div class="slides">
+		<img class="pics" src="assets/commissions/pen_tongue.JPG">
+	</div>
+	<div class="slides">
+		<img class="pics" src="assets/commissions/pen_eye.JPG">
+	</div>
+	<div class="slides">
+		<img class="pics" src="assets/commissions/pen_paw.JPG">
+	</div>
+	<div class="slides">
+		<img class="pics" src="assets/commissions/pen_nose.JPG">
+	</div>
+	<div class="slides">
 		<img class="pics" src="assets/commissions/cat1_1.JPG">
 	</div>
 	<div class="slides">
