shop page eyes move
shop page eyes move and back to top arrow changed to words

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Annie Courtney</title>
 	<link rel = "stylesheet" type = "text/css" href = "genStyle.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab&display=swap" rel="stylesheet">
-	<link rel='icon' href='assets/favicon1.svg'/>
+	<link rel="icon" href="assets/favicon1.svg"/>
 <!-- 	<link rel="apple-touch-icon-precomposed" href="favicon1.svg" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -37,13 +37,13 @@
 	  right: 5vw;
 	  border: none;
 	  outline: none;
-	  color: #ff780085;
-	  background-color: #00000020;
+	  color: #000000;
+	  background-color: #00000050;
 	  cursor: pointer;
-	  /*font-family: 'Amatic SC', serif;*/
+	  font-family: 'Amatic SC', serif;
 	  font-weight: bolder;
-	  font-size: 10vw;
-	  padding-bottom: 2vw;
+	  font-size: 7vw;
+	  padding-bottom: 1vw;
 	  padding-left: 1vw;
 	  padding-right: 1vw;
 	  border-radius: 0vw;
@@ -470,7 +470,7 @@
   		<div class="bar1 bar2 corners"></div>
   		<div id="nav">
   			<a id="artwork" class="page_title" href="index.html" target="_self">artwork</a>
-  			<img id="dot1"src="assets/dot.svg">
+  			<img id="dot1" src="assets/dot.svg">
   			<a id="shop" href="shop.html" target="_self">shop</a>
   			<img id="dot2" src="assets/dot.svg">
   			<a id="contact" href="contact.html">contact me</a>
@@ -513,7 +513,7 @@
 
     <div class="mySlides">
       <div class="numbertext">3 / 15</div>
-      <img src="assets/artwork/En Route.JPG"">
+      <img src="assets/artwork/En Route.JPG">
     </div>
     <div class="mySlides">
       <div class="numbertext">4 / 15</div>
@@ -604,7 +604,7 @@
 
 <!-- lightbox above -->
 
-	<button onclick="topFunction()" id="back2top" title="Go to top">&#x2191;</button>
+	<button onclick="topFunction()" id="back2top" title="Go to top">back to top</button>
 <!-- ^^^ page specific ^^^ -->
 </div>
 	<div id="footer">All work &#169; Annie Courtney unless otherwise  noted.</div>
