--- a/contact_submitted.html
+++ b/contact_submitted.html
@@ -3,267 +3,13 @@
 <head>
 	<!--contact page-->
 	<title>Annie Courtney</title>
-	<link rel = "stylesheet" type = "text/css" href = "genStyle.css" />
-	<link rel="stylesheet" type="text/css" href="contact_style.css"/> <!-- for eye movement -->
-	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab&display=swap" rel="stylesheet">
+	<link rel = "stylesheet" type = "text/css" href = "css/genStyle.css" />
+	<link rel="stylesheet" type="text/css" href="css/contact_eyes.css"/> <!-- for eye movement -->
+	<link rel="stylesheet" type="text/css" href="css/contact.css"/>
+	<link rel="stylesheet" type="text/css" href="css/submitted.css"/>
 	<link rel='icon' href='assets/favicon1.svg'/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script defer src="contact_script.js"></script> <!-- for eye movement -->
+	<script defer src="js/contact_eyes.js"></script> <!-- for eye movement -->
 </head>
-<style>
-	.alert {
-	  display: block;
-	  padding-left: 5vw;
-	  padding-right: 5vw;
-	  padding-bottom: 5vw;
-	  padding-top: 1vw;
-	  background-color: #000000;
-	  color: white;
-	  font-family: 'Josefin Slab', serif;
-	  font-weight: 700;
-	  font-size: 5vw;
-	  margin-top: 1vw;
-	  margin-bottom: 10vw;
-	  width: 100%;
-	}
-	.closebtn {
-	  margin-left: 7vw;
-	  color: white;
-	  font-weight: bold;
-	  float: right;
-	  font-size: 15vw;
-	  font-weight: 400;
-	  line-height: 0vw;
-	  margin-right: -2vw;
-	  cursor: pointer;
-	  margin-bottom: 1vw;
-	  margin-top: 5vw;
-	  font-family:'Josefin Slab', sans-serif;
-	}
-	.closebtn:hover {
-	  color: #ff7800;
-	}
-/*submit confirmation above*/
-	#handles{
-		font-size: 4.5vw;
-		position: absolute;
-		margin-top: -5vw;
-		margin-left: 7vw;
-		width: 45vw;
-	}
-	#my_email{
-		margin-top: 0;
-		margin-bottom: 0;
-	}
-	#my_email #email_text{
-		position: absolute;
-		margin-top: 1.5vw;
-		margin-left: 1.75vw;
-		text-decoration: none;
-		color: black;
-	}
-	#insta_handle{
-		margin-top: 0;
-		margin-bottom: 0;
-	}
-	#insta_handle #insta_text{
-		position: absolute;
-		margin-top: 1vw;
-		margin-left: 1.15vw;
-		text-decoration: none;
-		color: black;
-	}
-	#with_pupils{
-		display: block;
-	}
-	#without_pupils{
-		display: none;
-	}
-	.doodle{
-		width: 110vw;
-		height: auto;
-		margin-top: -2vw;
-		margin-bottom: -7vw;
-	}
-	#email_box{
-		font-size: 5vw;
-		margin: -16vw/*top*/ 7vw/*right*/ 5vw/*bottom*/ 7vw/*left*/;
-	}
-	#email_box input{
-		width: 100%;
-		height: 12vw;
-		margin-top: 1.5vw;
-		margin-bottom: 1.5vw;
-		font-size: 5vw;
-		font-family: 'Josefin Slab', serif;
-		padding: 0vw 0vw 0vw 1.5vw;;
-	}
-	#email_box textarea{
-		width: 100%;
-		height: 45vw;
-		margin-top: 1.5vw;
-		margin-bottom: 0;
-		font-size: 5vw;
-		font-family: 'Josefin Slab', serif;
-		padding: 1.5vw 1.5vw 0vw 2vw;
-	}
-	#email_box button{
-		background-color: black;
-		border-radius: 0;
-		border: 0;
-		color: white;
-		font-family: 'Amatic SC', cursive;
-		font-size: 7vw;
-		padding-left: 2.2vw;
-		padding-right: 2vw;
-		margin-top: 2vw;
-		margin-right: 0;
-		float: right;
-	}
-	#email_box button:hover{
-		background-color: #ff7800;
-		cursor: pointer;
-	}
-
-	input[name="_honey"] {
-  		display: none;
-	}
-
-/*desktop below*/
-
-	@media (min-width: 992px), (orientation: landscape) {
-		#inner_box{
-			display: grid;
-			grid-template-areas:
-			'alert' 
-			'doodle email_box';
-		}
-
-	.alert {
-	  display: block;
-	  padding-left: 2vw;
-	  padding-right: 2vw;
-	  padding-bottom: 3vw;
-	  padding-top: 1vw;
-	  background-color: #000000;
-	  color: white;
-	  font-family: 'Josefin Slab', serif;
-	  font-weight: 700;
-	  font-size: 2vw;
-	  margin-top: -1vw;
-	  margin-bottom: 6vw;
-	  width: 100%;
-	  text-align: center;
-	}
-	.closebtn {
-	  margin-left: 0vw;
-	  color: white;
-	  float: right;
-	  font-size: 5vw;
-	  font-weight: 400;
-	  margin-right: 0vw;
-	  margin-top: 1vw;
-	  cursor: pointer;
-	  font-family:'Josefin Slab', sans-serif;
-	}
-
-
-		#handles img{
-			width: 2.5vw;
-		}
-		#handles{
-			position: relative;
-			margin-top: -3vw;
-			margin-left: 2.5vw;
-			font-size: 2vw;
-			z-index: 2;
-		}
-		#my_email{
-			margin-top: 0;
-			margin-bottom: 0;
-			/*height: 5vh;*/
-		}
-		#my_email img{
-			margin-top: .25vw;
-		}
-		#my_email #email_text{
-			position: absolute;
-			margin-top: .75vw;
-			margin-left: 1vw;
-			text-decoration: none;
-		}
-		#insta_handle{
-			margin-top: 0;
-			margin-bottom: 0;
-			/*height: 5vh;*/
-		}
-		#insta_handle img{
-			margin-top: .5vw;
-		}
-		#insta_handle #insta_text{
-			position: absolute;
-			margin-top: .75vw;
-			margin-left: .75vw;
-			text-decoration: none;
-			color: black;
-		}
-		#phone{
-			width: 62vw;
-			position: relative;
-		}
-		#with_pupils{
-			display: none;
-		}
-		#without_pupils{
-			display: block;
-		}
-		.doodle{
-			height: auto;
-			width: 62vw;
-			margin-top: -8vw;
-			margin-bottom: 0;
-			z-index: -1;
-		}
-		#email_box{
-			margin: -48.1vw/*top*/ 0/*right*/ 2vw/*bottom*/ 52.5vw/*left*/;
-			width: 45vw;
-			height: auto;
-			font-size: 2vw;
-			z-index: 2;
-		}
-		#email_box input{
-			width: 100%;
-			height: 4vw;
-			margin-top: .5vw;
-			margin-bottom: 1vw;
-			font-size: 2vw;
-			font-family: 'Josefin Slab', serif;
-			padding: 0 .1vw 0px 1vw;;
-		}
-		#email_box textarea{
-			width: 100%;
-			height: 12vw;
-			margin-top: .5vw;
-			margin-bottom: 0;
-			font-size: 2vw;
-			font-family: 'Josefin Slab', serif;
-			padding: 1vw .1vw 0 1vw;
-			rows: 20;
-		}
-		#email_box button{
-			background-color: black;
-			border-radius: 0;
-			border: 0;
-			color: white;
-			font-family: 'Amatic SC', cursive;
-			font-size: 3vw;
-			padding-left: 1vw;
-			padding-right: 1vw;
-			margin-top: 0vw;
-			margin-right: 0;
-		}
-	}
-</style>
 <body>
 	<div id="box">
 		<div class="bar1"></div>
