--- a/shop.html
+++ b/shop.html
@@ -3,458 +3,18 @@
 <head>
 	<!--shop page-->
 	<title>Annie Courtney</title>
-	<link rel = "stylesheet" type = "text/css" href = "genStyle.css" />
-	<link rel = "stylesheet" type = "text/css" href = "shop_style.css"/>
-	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Slab&display=swap" rel="stylesheet">
-	<link rel='icon' href='assets/favicon1.svg'/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type='text/javascript'>
-function preview_image(event) 
-{
- var reader = new FileReader();
- reader.onload = function()
- {
-  var output = document.getElementById('output_image');
-  output.src = reader.result;
- }
- reader.readAsDataURL(event.target.files[0]);
-}
-</script>
-<script defer src="shop_script.js"></script>
+	<link rel = "stylesheet" type = "text/css" href = "css/genStyle.css" /><!--header style-->
+	<link rel = "stylesheet" type = "text/css" href = "css/shop_eyes.css"/><!--eyes moving-->
+	<link rel="stylesheet" type="text/css" href="css/shop.css"/><!--shop page style-->
+	<link rel='icon' href='assets/favicon1.svg'/><!--favicon-->
+	<script defer src="js/shop.js"></script><!--preview upload and pet portrait slideshow-->
+	<script defer src="js/shop_eyes.js"></script><!--eyes moving-->
 </head>
 <style>
+	/*hide the submit alert*/
 	.alert {
 	  display: none;
-	  padding-left: 5vw;
-	  padding-right: 5vw;
-	  padding-bottom: 5vw;
-	  padding-top: 1vw;
-	  background-color: #000000;
-	  color: white;
-	  font-family: 'Josefin Slab', serif;
-	  font-weight: 700;
-	  font-size: 5vw;
-	  margin-top: 1vw;
-	  margin-bottom: 10vw;
-	  width: 100%;
 	}
-	.closebtn {
-	  margin-left: 7vw;
-	  color: white;
-	  font-weight: bold;
-	  float: right;
-	  font-size: 15vw;
-	  font-weight: 400;
-	  line-height: 0vw;
-	  margin-right: -2vw;
-	  cursor: pointer;
-	  margin-bottom: 1vw;
-	  margin-top: 5vw;
-	  font-family:'Josefin Slab', sans-serif;
-	}
-	.closebtn:hover {
-	  color: #ff7800;
-	}
-/*submit confirmation above*/
-	.slides {
-		display: none;
-	}	
-	.slides img{
-		display: block;
-		height: 60vw;
-		width: auto;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: 7vw;
-		padding: 0;
-		margin-bottom: 0vw;
-	}
-	.slide_button{
-		/*z-index: 99;*/
-		font-family: 'Josefin Slab', serif;
-		font-size: 7vw;
-		color: #ffffff;
-		border-radius: 0vw;
-		border: 0;
-		background-color: #000000;
-		padding-left: 1.5vw;
-		padding-right: 1.5vw;
-		position: relative;
-		/*top: 10vw;*/
-		font-weight: 700;
-		margin-top: -32vw;
-	}
-	.prev{
-		float: left;
-		margin-left: 2vw;
-	}
-	.next{
-		float: right;
-		margin-right: 2vw;
-	}
-	.slide_button:hover{
-		color: #ffffff;
-		background-color: #ff7800;
-		cursor: pointer;
-	}
-	#commission{
-		margin-top: 4vw;
-		margin-right: 7vw;
-		margin-left: 7vw;
-		font-family: 'Amatic SC', cursive;
-		font-size: 8vw;
-		font-weight: 700;
-		margin-bottom: 0;
-	}
-	#estimate{
-		margin-right: 7vw;
-		margin-left: 7vw;
-		text-decoration: none;
-		color: black;
-		font-size: 5vw;
-		margin-top: .5vw;
-	}
-	#estimate a{
-		text-decoration: none;
-		color: black;
-	}
-	#estimate a:hover{
-		color: #ff7800;
-	}
-	#email_box{
-		font-size: 5vw;
-		margin-left: 7vw;
-		margin-right: 7vw;
-		margin-bottom: 15vw;
-	}
-	#email_box input{
-		width: 100%;
-		height: 12vw;
-		margin-top: 1.5vw;
-		margin-bottom: 1.5vw;
-		font-size: 5vw;
-		font-family: 'Josefin Slab', serif;
-		padding: 0 0vw 0  1.5vw;
-	}
-	#email_box textarea{
-		width: 100%;
-		height: 28vw;
-		margin-top: 1.5vw;
-		margin-bottom: 0;
-		font-size: 5vw;
-		font-family: 'Josefin Slab', serif;
-		padding: 1.5vw 1.5vw 0vw 2vw;
-	}
-	#email_box button{
-		background-color: black;
-		border-radius: 0;
-		border: 0;
-		color: white;
-		font-family: 'Amatic SC', cursive;
-		font-size: 7vw;
-		float: right;
-		padding-left: 2.2vw;
-		padding-right: 2vw;
-		margin-top: 2vw;
-		margin-right: 0;
-	}
-	#email_box .attach{
-		margin-right: 7vw;
-	}
-	#email_box button:hover{
-		background-color: #ff7800;
-		cursor: pointer;
-	}
-	#output_image{
-	 	max-width: 25vw;
-	 	margin: 2vw/*top*/ 0/*right*/ 0vw/*bottom*/ 2vw/*left*/;
-	}
-
-	input[name="_honey"] {
-  		display: none;
-	}
-
-/*estimate stuff below*/
-	.estimate_bar {
-		position: relative;
-		background-color: #ffddc7;
-		height: 9vw;
-		width: 88vw;
-		border-radius: 1vw;
-		left: 0;
-		margin-top: .6vw;
-	}
-	.corner{
-		margin-top: -9vw;
-		border-radius: 0;
-		width: 10%;
-	}
-	#estimate_header{
-		position: relative;
-		font-family: 'Amatic SC', cursive;
-		font-weight: 700;
-		font-size: 8vw;
-		margin-left: 29vw;
-		margin-top: -9.5vw;
-		margin-bottom: 5vw;
-		color: black;
-	}
-	#calc_box{
-		font-size: 5vw;
-		margin: 0vw/*top*/ 7vw/*right*/ 0vw/*bottom*/ 7vw/*left*/;
-		position: relative;
-	}
-	#calc_box input{
-		font-family: 'Josefin Slab', serif;
-		width: 18vw;
-		font-size: 8vw;
-		text-align: center;
-		padding: 2vw/*top*/ 0vw/*left*/ 0vw/*bottom*/ 2vw/*right*/;
-		margin-top: 0px;
-		margin-bottom: 0vw;
-	}
-	#calc_box button{
-		background-color: black;
-		border-radius: 0;
-		border: 0;
-		color: white;
-		font-family: 'Amatic SC', cursive;
-		font-size: 7vw;
-		float: right;
-		margin-top: 0vw;
-		padding-left: 2.2vw;
-		padding-right: 2vw;
-	}
-	#calc_box button:hover{
-		background-color: #ff7800;
-		cursor: pointer;
-	}
-	#output_price{
-		margin-top: 1.9vw;
-		font-size: 7vw;
-		font-weight: 700;
-		margin-right: 0vw;
-	}
-	#output_info{
-		position: absolute;
-		margin-top: -8vw;
-		font-size: 5vw;
-		font-weight: 700;
-		margin-right: 0vw;
-	}
-
-	#doodle{
-		width: 100%;
-		height: auto;
-		position: relative;
-		margin-bottom: -9vw;
-		margin-top: -5vw;
-	}
-	#doodle_left{
-		display: none;
-	}
-	#doodle_right{
-		display: none;
-	}
-
-/*desktop below*/
-
-	@media (min-width: 992px), (orientation: landscape) {
-		#inner_box{
-			display: grid;
-			grid-template-areas: 
-			'alert'
-			'heading email_box'
-			'slideshow email_box'
-			'estimate_heading'
-			'calc_box doodle';
-		}
-
-		.alert {
-		  display: none;
-		  padding-left: 2vw;
-		  padding-right: 2vw;
-		  padding-bottom: 3vw;
-		  padding-top: 1vw;
-		  background-color: #000000;
-		  color: white;
-		  font-family: 'Josefin Slab', serif;
-		  font-weight: 700;
-		  font-size: 2vw;
-		  margin-top: -1vw;
-		  margin-bottom: 6vw;
-		  width: 100%;
-		  text-align: center;
-		}
-		.closebtn {
-		  margin-left: 0vw;
-		  color: white;
-		  float: right;
-		  font-size: 5vw;
-		  font-weight: 400;
-		  margin-right: 0vw;
-		  margin-top: 1vw;
-		  cursor: pointer;
-		  font-family:'Josefin Slab', sans-serif;
-		}
-
-
-		#slideshow{
-			margin-left: 4vw;
-			width: 43vw;
-		}
-		.slides img{
-			height: 28.25vw;
-			width: auto;
-			margin-left: auto;
-			margin-right: auto;
-		}
-		.slide_button{
-			z-index: 99;
-			margin-top: -15.5vw;
-			/*top: 34vw;*/
-			font-size: 3vw;
-			border-radius: 0vw;
-		}
-		.prev{
-			margin-left: -2vw;
-		}
-		.next{
-			margin-right: -2vw;
-		}
-		#heading{
-			position: relative;
-			float: left;
-			margin-left: 4.5vw;
-			margin-top: -37vw;
-			padding: 0;
-			width: 50vw;
-		}
-		#commission{
-			font-size: 4vw;
-			margin-left: 0vw;
-			margin-top: 0vw;
-		}
-		#estimate{
-			font-size: 2vw;
-			margin-left: .15vw;
-		}
-		#email_box{
-			font-size: 2vw;
-			width: 44vw;
-			margin-right: 0;
-			padding-bottom: 0;
-			margin-left: 53vw;
-			margin-top: -36vw;
-		}
-		#email_box input{
-			margin-top: .5vw;
-			height: 4vw;
-			font-size: 2vw;
-			padding: 0vw 0vw 0vw 1vw;
-			margin-bottom: 1vw;
-		}
-		#email_box textarea{
-			height: 11vw;
-			font-size: 2vw;
-			margin-top: .5vw;
-			margin-bottom: 0;
-			padding: 1vw 1vw 0vw 1vw;
-		}
-		#email_box button{
-			font-size: 3vw;
-			padding-left: 1.2vw;
-			padding-right: 1vw;
-			margin-top: -1.75vw;
-		}
-		#email_box .attach{
-			margin-right: 4vw;
-		}
-		#output_image{
-		 	max-height: 4vw;
-		 	margin: -1vw/*top*/ 0vw/*right*/ 0/*bottom*/ 1vw/*left*/;
-		}
-
-/*desktop estimate stuff below*/
-		.estimate_bar {
-			height: 4.2vw;
-			width: 97vw;
-			border-radius: .35vw;
-			margin-top: 1vw;
-			margin-left: 1.5vw;
-		}
-		.corner{ 
-			display: none;
-			border-radius: 0;
-			width: 2vw;
-		}
-		#estimate_header{
-			position: relative;
-			font-size: 4vw;
-			margin-left: 2.5vw;
-			margin-top: -4.5vw;
-			float: left;
-		}
-		#doodle{
-			display: none;
-		}
-		#doodles{
-			width: 92%;
-			margin-right: 4vw;
-			margin-left: 4vw;
-			margin-top: -3vw;
-			position: relative;
-		}
-		#doodle_left{
-			display: inline-block;
-			width: 30vw;
-			height: auto;
-			margin-left: 10vw;
-		}
-		#doodle_right{
-			display: inline-block;
-			width: 30vw;
-			height: auto;
-			float: right;
-			margin-top: 16vw;
-			margin-right: 7vw;
-		}
-		#calc_box{
-			width: 33vw;
-			height: 30vw;
-			position: absolute;
-			font-size: 2vw;
-			margin: -30vw/*top*/ 0/*right*/ 0vw/*bottom*/ 26vw/*left*/;
-			z-index: 99;
-		}
-		#calc_box input{
-			width: 9vw;
-			font-size: 4vw;
-			padding: 1vw/*top*/ 0vw/*left*/ 0vw/*bottom*/ 0vw/*right*/;
-		}
-		#calc_box button{
-			font-size: 3vw;
-			padding-left: 1.2vw;
-			padding-right: 1vw;
-			float: left;
-		}
-		#output_price{
-			position: absolute;
-			font-size: 3vw;
-			margin-top: 6vw;
-			margin-left: .25vw;
-			float: left;
-		}
-		#output_info{
-			position: absolute;
-			margin-top: 8vw;
-			font-size: 2vw;
-			margin-left: -14.5vw;
-			margin-right: 4vw;
-		}
-	}
-
 </style>
 <body>
 	<div id="box">
@@ -596,81 +156,5 @@ function preview_image(event)
 <!-- ^^^ page specific ^^^ -->
 </div>
 	<div id="footer">All work &#169; Annie Courtney unless otherwise  noted.</div>
-<script>
-	var slideIndex = 1;
-	showSlides(slideIndex);
-
-	function plusSlides(n) {
-	  showSlides(slideIndex += n);
-	}
-
-	function currentSlide(n) {
-	  showSlides(slideIndex = n);
-	}
-
-	function showSlides(n) {
-	  var i;
-	  var s = document.getElementsByClassName("slides");
-	  // var dots = document.getElementsByClassName("dot");
-	  if (n > s.length) {slideIndex = 1}    
-	  if (n < 1) {slideIndex = s.length}
-	  for (i = 0; i < s.length; i++) {
-	      s[i].style.display = "none";  
-	  }
-	  // for (i = 0; i < dots.length; i++) {
-	  //     dots[i].className = dots[i].className.replace(" active", "");
-	  // }
-	  s[slideIndex-1].style.display = "block";  
-	  // dots[slideIndex-1].className += " active";
-	}
-
-
-// estimate stuff below
-	function lowEstimate(x,y){
-		z = x*y;
-
-		canvas = 0;
-
-		if(z<200){
-			canvas=z*.1
-		}else if(z<1300){
-			canvas=z*.05
-		}else{
-			canvas=z*.01;
-		}
-
-		paint = 10 * (z/100);
-
-		hours = (15 * ((z/2)/16))+(7.5*((z/2)/16)); //low estimate (only half of the canvas is full detail (ie full hour rate), (other half is half rate))
-
-		return Math.ceil(canvas + paint + hours);
-
-	}
-	function highEstimate(x,y){
-		z = x*y;
-
-		canvas = 0;
-
-		if(z<200){
-			canvas=z*.1
-		}else if(z<1300){
-			canvas=z*.05
-		}else{
-			canvas=z*.01;
-		}
-
-		paint = 10 * (z/100);
-
-		hours = 15 * (z/16); //high estimate (the whole canvas is full detail)
-
-		return Math.ceil(canvas + paint + hours);
-	}
-	function output(){
-		return '$'+lowEstimate(document.getElementById('length').value, document.getElementById('width').value)+' - $'+highEstimate(document.getElementById('length').value, document.getElementById('width').value);
-	}
-	function output_info(){
-		return '(depending on the level of detail)';
-	}
-</script>
 </body>
 </html> 
