hopefully fixing small screen bugs
also getting rid of the unused submit alert code on shop.html and
contact.html

--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -10,6 +10,7 @@
 	<link rel='icon' href='assets/favicon1.svg'/><!--favicon-->
 	<script defer src="js/shop.js"></script><!--preview upload and pet portrait slideshow-->
 	<script defer src="js/shop_eyes.js"></script><!--eyes moving-->
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
 </head>
 <body>
 	<div id="box">
