--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="css/contact.css"/>
 	<link rel='icon' href='assets/favicon1.svg'/>
 	<script defer src="js/contact_eyes.js"></script> <!-- for eye movement -->
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
 </head>
-<style>
-	/*hide the submit alert*/
-	.alert{
-		display:none;
-	}
-</style>
 <body>
 	<div id="box">
 		<div class="bar1"></div>
@@ -32,12 +27,6 @@
 	</div>
 <div id="inner_box">
 <!--page specific-->
-
-<div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <br>
-  Thank you! Your message has been sent and I will get back to you as soon as possible. - Annie
-</div>
 
 	<div id="handles">
 		<a href="mailto:annie.t.courtney@gmail.com"><p id="my_email"><img id="puffalope" src="assets/mail.svg" width="30vw"><a id="email_text" href="mailto:annie.t.courtney@gmail.com"> annie.t.courtney@gmail.com</a></p></a>
