--- a/shop.html
+++ b/shop.html
@@ -9,13 +9,8 @@
 	<link rel='icon' href='assets/favicon1.svg'/><!--favicon-->
 	<script defer src="js/shop.js"></script><!--preview upload and pet portrait slideshow-->
 	<script defer src="js/shop_eyes.js"></script><!--eyes moving-->
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
 </head>
-<style>
-	/*hide the submit alert*/
-	.alert {
-	  display: none;
-	}
-</style>
 <body>
 	<div id="box">
 		<div class="bar1"></div>
@@ -33,12 +28,6 @@
 	</div>
 <div id="inner_box">
 <!--page specific-->
-
-<div class="alert">
-  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <br>
-  Thank you! Your request has been submitted and I will get back to you as soon as possible. - Annie
-</div>
 
 <div id="slideshow">
 	<div class="slides">
