more phone/ipad sizing bug fix

--- a/contact_submitted.html
+++ b/contact_submitted.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/submitted.css"/>
 	<link rel='icon' href='assets/favicon1.svg'/>
 	<script defer src="js/contact_eyes.js"></script> <!-- for eye movement -->
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
 </head>
 <body>
 	<div id="box">
