--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css"/>
 	<link rel="icon" href="assets/favicon1.svg"/>
 	<script defer src="js/index.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
 </head>
 <body>
 	<!-- header -->
