--- a/shop_submitted.html
+++ b/shop_submitted.html
@@ -10,7 +10,7 @@
 	<link rel='icon' href='assets/favicon1.svg'/><!--favicon-->
 	<script defer src="js/shop.js"></script><!--preview upload and pet portrait slideshow-->
 	<script defer src="js/shop_eyes.js"></script><!--eyes moving-->
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!--something about everything looking right on ipad? iphone? idk-->
 </head>
 <body>
 	<div id="box">
